# Text2Image

Text2Image/: install.sh  pyproject.toml  requirements.txt  streamlit_app.py
Text2Image/text2image/: inference.py
