[tool.poetry]
name = "text2image"
version = "0.1.0"
description = ""
authors = ["Karan Verma <vkaran969@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.27.2"
transformers = "^4.39.3"
accelerate = "^0.28.0"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
